# FrequencyVisualizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  app.cpp  app2.cpp  app3.cpp  serialtest.cpp  setup.sh  test.py
config/: audio.conf  led.conf
include/: Color.h  FFTVisualizer.h  LEDController.h  LEDEnsemble.h  LEDVisualizer.h  LED_common.h  SerialMessage.h  SerialReader.h  Utility.h  arduino.ino  configreader.h
src/: Color.cpp  FFTVisualizer.cpp  LEDController.cpp  LEDEnsemble.cpp  LEDVisualizer.cpp  SerialMessage.cpp  SerialReader.cpp  configreader.cpp
